@@ -41,11 +41,11 @@ type_schema = schemata.ATContentTypeSchema.copy() + atapi.Schema((
         required=False,
         searchable=False,
         languageIndependent=True,
-		multiValued=False,
+        multiValued=False,
         relationship='ref_link_internal',
         widget = ReferenceBrowserWidget(
             label = _(u"label_link_internal", default=u"Internal Link"),
-			description = _(u"help_link_internal", default=u"Link to internal content. For external content, use the External Link field."),
+            description = _(u"help_link_internal", default=u"Link to internal content. For external content, use the External Link field."),
             allow_search=True,
             allow_browse=True,
             force_close_on_insert = True,
@@ -53,41 +53,29 @@ type_schema = schemata.ATContentTypeSchema.copy() + atapi.Schema((
             #show_results_without_query = True,
             #show_review_state = True,
         ),
-	),
+    ),
     atapi.StringField('link_external',
         required=False,
         searchable=False,
         languageIndependent=True,
-		validators=("isURL"),
-		widget = atapi.StringWidget(
+        validators=("isURL"),
+        widget = atapi.StringWidget(
             label = _(u"label_link_external", default=u"External Link"),
-			description = _(u"help_link_external", default=u"Url to external content. For internal content, use the field above. Use the form http://WEBSITE.TLD/"),
+            description = _(u"help_link_external", default=u"Url to external content. For internal content, use the field above. Use the form http://WEBSITE.TLD/"),
         ),
-	),
-	atapi.TextField('text',
-        required=False,
-        searchable=False,
-        languageIndependent=False,
-        default_content_type = 'text/plain',
-        allowable_content_types = ('text/plain',),
-		widget = atapi.TextAreaWidget(
-            label = _(u"label_text", default=u"Text"),
-			description = _(u"help_text", default=u"Additional text to be shown in the teaser."),
-			rows = 5,
-        ),
-	),
-	atapi.StringField('importance',
+    ),
+    atapi.StringField('importance',
         required=True,
         searchable=True,
         languageIndependent=True,
         vocabulary_factory="collective.teaser.ImportanceVocabulary",
         enforceVocabulary=True,
         default=DEFAULT_IMPORTANCE,
-		widget=atapi.SelectionWidget(
+        widget=atapi.SelectionWidget(
             label = _(u"label_importance", default=u"Importance"),
-			description = _(u"help_importance", default=u"Select the importance of the teaser. The frequency of the teaser will be set accordingly."),
+            description = _(u"help_importance", default=u"Select the importance of the teaser. The frequency of the teaser will be set accordingly."),
         ),
-	),
+    ),
 
 ))
 
